[package]
name = "opengl_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
glam = "0.20"
memoffset = "0.6"
image = "0.23"
glutin = "0.27"
rand_xorshift = "0.3"
rand = "0.8"

[build-dependencies]
gl_generator = "0.14.0"
