[package]
name = "ogt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["webgl1"]
webgl1 = []

[dependencies]
glam = "0.20"
memoffset = "0.6"
image = {version = "0.23", default-features = false, features = ["png", "jpeg"]}
miniquad = {version = "0.3.0-alpha.43", features = ["log-impl"]}
quad-rand = "0.2.1"
fontdue = "0.6"
#symphonia = "0.4"
#kira = { version = "0.5", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
wee_alloc = "0.4"

[dev-dependencies]
imageproc = "0.22"

[profile.release-lto]
inherits = "release"
lto = true
