[package]
name = "ogt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["miniquad"]

[dependencies]
glam = "0.29"
memoffset = "0.9"
image = {version = "0.25", default-features = false, features = ["png", "jpeg"]}
miniquad = {version = "0.4", features = ["log-impl"], optional = true}
quad-rand = "0.2.1"
fontdue = "0.9"
#symphonia = "0.4"
kira = { version = "0.9", default-features = false }

[target.'cfg(target_family = "wasm")'.dependencies]
wee_alloc = "0.4"

[dev-dependencies]
imageproc = "0.25"

[profile.release-lto]
inherits = "release"
lto = true
